# messenger

./: .gitignore  CMakeLists.txt  CMakeLists_client.txt  README.md
src/: main.cpp  peer.cpp  peer.hpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  main_client.cpp  make_client
src/server/: CMakeLists.txt  main_server.cpp  make_server  server.cpp  server.hpp
